Device: Added Santon
Signed-off-by: deadmanxxd <deadmanxxd@gmail.com>

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 						<a class="dropdown-item" href="jasmine_sprout.html"><span class="item-text">JASMINE SPROUT</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="vince.html"><span class="item-text">VINCE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="santoni.html"><span class="item-text">SANTONI</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
