--- a/santaoni.html
+++ b/santaoni.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>x00t - Corvus OS - Downloads for x00t</title>
+    <title>Santoni - Corvus OS - Downloads for santoni</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>X00T</h1>
+                    <h1>SANTONI</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -160,7 +160,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>x00t</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Santoni</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -175,19 +175,19 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;JulianSurya<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;zhantech<span class="blue"></span></h3>
                         <p class="p-large">																		
-							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/x00t.html"></iframe>
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/santoni.html"></iframe>
 							<p></p>			
-						</p>				
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1374518/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/CorvusX00T"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/asus-zenfone-max-pro-m1/development/rom-corvus-os-v4-0-juliansurya-t4081283"><i class="fa fa-2x fa-globe"></i></a>							
+						</p>			
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1395364/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusSantoni"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/xiaomi-redmi-4x/development/rom-corvus-os-v6-5-t4117175"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/x00t.png" alt="alternative">
+                        <img class="img-fluid" src="images/santoni.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
