--- a/beryllium.html
+++ b/beryllium.html
@@ -113,7 +113,7 @@
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="vince.html"><span class="item-text">VINCE</span></a>
 						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="vince.html"><span class="item-text">SANTONI</span></a>
+						<a class="dropdown-item" href="santoni.html"><span class="item-text">SANTONI</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
