Added Gerrit Review link

--- a/index.html
+++ b/index.html
@@ -767,6 +767,10 @@
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
+								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.xyz">Review</a></div>
+								</li>
+								<li class="media">
+								<i class="fas fa-square"></i>
 								<div class="media-body">Github <a class="turquoise" href="https://github.com/Corvus-ROM">Source</a></div>
 								</li>
 								<li class="media">
