Device: added Riva

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 						<a class="dropdown-item" href="vince.html"><span class="item-text">VINCE</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="santoni.html"><span class="item-text">SANTONI</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="riva.html"><span class="item-text">RIVA</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
