--- a/riva.html
+++ b/riva.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Beryllium - Corvus OS - Downloads for Beryllium</title>
+    <title>Riva - Corvus OS - Downloads for riva</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>BERYLLIUM</h1>
+                    <h1>RIVA</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Beryllium</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Riva</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -177,19 +177,19 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;Saikiran<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;Anggi Al'Ansori<span class="blue"></span></h3>
                         <p class="p-large">																		
-							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/beryllium.html"></iframe>
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/riva.html"></iframe>
 							<p></p>			
-						</p>					
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1372060/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/corvusberyllium"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/poco-f1/development/rom-corvus-os-v4-5-t4086151/page7"><i class="fa fa-2x fa-globe"></i></a>							
+						</p>			
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1391790/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusRiva"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/xiaomi-redmi-5a/development/unofficial-corvus-os-v5-5-t4109847"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/beryllium.png" alt="alternative">
+                        <img class="img-fluid" src="images/riva.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
