--- a/index.html
+++ b/index.html
@@ -260,24 +260,49 @@
 			<div class="col-lg-6">
 				<h3>Corvus OS</h3>
 				<hr>             
-				<h4>ROM Changelog v6.5</h4>				
+				<h4>ROM Changelog v7.0</h4>				
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Face Unlock Returns for Official Devices</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed wake on plug</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed notification LED blink for missed calls</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed volume panel not changing on material ocean theme</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed BT icon in Statusbar</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in QS data usage</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Enabled default lockscreen shortcuts</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improved art stuff</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improved alert slider dialog</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Clean up Network traffic Indicator</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Zygote art improvments</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed QS themes</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Moved ticker to notification fragment</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added some new FOD animations</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>FODCircleView: Improved position update for icons</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Other fixes and improvements</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Bump to v7.0</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Merged July Security Patch</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Merged Recovery Stuff from los</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Merged CAF LA.UM.8.4.1.r1-01700-8x98.0 tag into frameworks/av</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Qcom BT Stack</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added QS tile Style Picker</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Privacy Indicator</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Theme settings dashboard icons</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Lockscreen shortcuts preview</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Vowifi icon & style</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Systemui restart for QS tint</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Long screenshot type on screenshot tile</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Switched to Old Screen Recorder</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Notification Counters</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Dual Statusbar Row (only available on notch devices)</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Wired/BT Headset Ringtone Focus mode</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Settings for Tuning Statusbar extra padding</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added FOD invisible icon</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added FOD dimming icon</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Reverted Unlink QS and Statusbar content padding</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Changed Default System Animation scale 0.6</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Updated dark material colors</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Allowed snoozing of SD card notification unconditionally</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Linotte Font</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added some more Edge Lighting settings</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Boosted up the Statusbar</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed QTI Performance Spam</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Toggle Bluetooth Battery level</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Long Screenshot Bug</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Android Auto issues</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Keyguard Delay on accessing FP</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed some Logspams, Memory Leaks</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Inactive State Wifi Icon in Circular & Filled Icon Pack</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Lags when using Clear Theme</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Moved Data Usage to QQS</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Switch to Defalut Gboard Keyboard</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed unnecessary recent apps transition</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Heads Up Statusbar Notifications Rounded corner content padding</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed no icon shown for data limit notification</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Many more underhood optimizations and fixes</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added more bugs to fix later xD</td></tr>
 				</table>
 				<a class="btn-solid-reg1" href="https://t.me/CorvusUpdates">Update Channel</a> <a class="btn-outline-reg mfp-close as-button" href="#home">BACK</a> 
 			</div>
