ocs-site-verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Corvus OS is another retarded ROM with many retarded Customization">
     <meta name="author" content="Inovatik">
+    <meta name="ocs-site-verification" content="8dfad1cdbb65120004fd0a75976f70a8" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
