Corvus Site Update 1/2

--- a/index.html
+++ b/index.html
@@ -74,51 +74,10 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#preview">SCREENS</a>
                 </li>
-
-                <!-- Dropdown Menu -->          
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#download" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOADS</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">                                                
-                        <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="twolip.html"><span class="item-text">TWOLIP</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="tissot.html"><span class="item-text">TISSOT</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="beryllium.html"><span class="item-text">BERYLLIUM</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="platina.html"><span class="item-text">PLATINA</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="violet.html"><span class="item-text">VIOLET</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="whyred.html"><span class="item-text">WHYRED</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="x00t.html"><span class="item-text">X00T</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="ginkgo.html"><span class="item-text">GINKGO</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="ysl.html"><span class="item-text">YSL</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="jasmine_sprout.html"><span class="item-text">JASMINE SPROUT</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="vince.html"><span class="item-text">VINCE</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="santoni.html"><span class="item-text">SANTONI</span></a>
-						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="riva.html"><span class="item-text">RIVA</span></a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="download.html">DOWNLOAD</a>
                 </li>
-                <!-- end of dropdown menu -->
+                
 
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#contact">CONTACT</a>
@@ -771,7 +730,11 @@
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.xyz">Review</a></div>
+								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.com">Review</a></div>
+								</li>
+								<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">Jenkins <a class="turquoise" href="https://jenkins.corvusrom.com">Jenkins</a></div>
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
@@ -779,7 +742,7 @@
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Github <a class="turquoise" href="https://github.com/Corvus-devices">Device</a></div>
+								<div class="media-body">Github <a class="turquoise" href="https://github.com/CorvusRom-Devices">Device</a></div>
 								</li>
                             
                         </ul>
