--- a/download.html
+++ b/download.html
@@ -151,10 +151,12 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
 			        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374627/"><i class="fas fa-download"></i>Download</a>&nbsp;&nbsp;
-	  <a class="btn-solid-lg popup-with-move-anim" href="#enchilada-lightbox-1"><i class="fas fa-list"></i>Changelog</a>&nbsp;&nbsp;
-	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusEnchilada"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;
-	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269"><i class="fas fa-comments"></i>XDA Thread</a>
+		<table>
+	  <tr><a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374627/"><i class="fas fa-download"></i>Download</a>&nbsp;&nbsp;</tr>
+	  <tr><a class="btn-solid-lg popup-with-move-anim" href="#enchilada-lightbox-1"><i class="fas fa-list"></i>Changelog</a>&nbsp;&nbsp;</tr>
+	  <tr><a class="btn-solid-lg page-scroll" href="https://t.me/CorvusEnchilada"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;</tr>
+	  <tr><a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269"><i class="fas fa-comments"></i>XDA Thread</a></tr>
+	  </table>
 	  </p>
       
       </div>
