[Hate] Fix some Derp - margin derp

--- a/download.html
+++ b/download.html
@@ -350,7 +350,7 @@
 	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372054/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#mido-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusMido" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-comments" style="margin: 10px"></i>XDA Thread</a> <!--xda needs to update-->
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a> <!--xda needs to update-->
 	  </p>
 
       </div>
@@ -403,10 +403,10 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-download" style="margin: 10px"></i>Download</a>
-	  <a class="btn-solid-lg popup-with-move-anim" href="#begonia-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fab fa-telegram" style="margin: 10px"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-comments" style="margin: 10px"></i>XDA Thread</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download" ></i>Download</a>
+	  <a class="btn-solid-lg popup-with-move-anim" href="#begonia-lightbox-1"style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments" ></i>XDA Thread</a>
 	  </p>
 
       </div>
@@ -431,10 +431,10 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-download" style="margin: 10px"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#sanders-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fab fa-telegram" style="margin: 10px"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-comments" style="margin: 10px"></i>XDA Thread</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
 	  </p>
 
       </div>
@@ -515,10 +515,10 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://downloads.corvusrom.com/0:/vince/Corvus_v7.5-OMEN-vince-Gapps-25072020-OFFICIAL-1821.zip"><i class="fas fa-download" style="margin: 10px"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://downloads.corvusrom.com/0:/vince/Corvus_v7.5-OMEN-vince-Gapps-25072020-OFFICIAL-1821.zip" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#vince-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusVince" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-comments" style="margin: 10px"></i>XDA Thread</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
 	  </p>
 
       </div>
@@ -543,7 +543,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://sourceforge.net/projects/my-roms-violet/files/CorvusOS/"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://sourceforge.net/projects/my-roms-violet/files/CorvusOS/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#violet-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusViolet" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-7-pro/development/rom-corvus-os-v3-5-t4074793" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -803,7 +803,7 @@
 	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1379272/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#jasmine_sprout-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusJasmineWayne" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="#"><i class="fas fa-comments" style="margin: 10px"></i>XDA Thread</a>
+	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments" ></i>XDA Thread</a>
 	  </p>
 
       </div>
