Add Download Button Icon

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="text-container">
                             <h2>Corvus OS<br><span id="js-rotating">FEATURES, SPEEDY, SMOOTHNESS</span></h2>
                             <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objective is stability while being feature-rich at the same time. We won't believe that Corvus is better ROM than others, but we will always try to give you the best.</p>
-                            <a class="btn-solid-lg page-scroll" href="download.html"><i class="fab fa-"></i>Download</a>
+                            <a class="btn-solid-lg page-scroll" href="download.html"><i class="fas fa-angle-double-down"></i> Download</a>
                             <a class="btn-solid-lg popup-with-move-anim" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
                         </div>
                     </div> <!-- end of col -->
