update footer for download section

--- a/download.html
+++ b/download.html
@@ -842,14 +842,18 @@
                 <div class="col-md-4">
                     <div class="footer-col middle">
                         <h4>Important Links</h4>
-                        <ul class="list-unstyled li-space-lg">
+                        <ul class="list-unstyled li-space-lg">                            
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Read our <a class="turquoise" href="#your-link">Privacy Policy</a></div>
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.xyz">Review</a></div>
+								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.com">Review</a></div>
+								</li>
+								<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">Jenkins <a class="turquoise" href="https://jenkins.corvusrom.com">Jenkins</a></div>
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
@@ -857,9 +861,9 @@
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Github <a class="turquoise" href="https://github.com/Corvus-devices">Device</a></div>
+								<div class="media-body">Github <a class="turquoise" href="https://github.com/CorvusRom-Devices">Device</a></div>
 								</li>
-
+                            
                         </ul>
                     </div>
                 </div> <!-- end of col -->
