Updated Changelog links (Enchilada, X00P, Curtana, JD2019, Tissot)

--- a/download.html
+++ b/download.html
@@ -904,7 +904,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/enchilada.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/enchilada"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -992,7 +992,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/tissot.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/tissot"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1000,7 +1000,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/curtana.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/curtana.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1056,7 +1056,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/JD2019.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/jd2019.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1072,7 +1072,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/X00P.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/X00P.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
