--- a/download.html
+++ b/download.html
@@ -952,7 +952,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/RMX199X.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/RMX199X.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
