--- a/download.html
+++ b/download.html
@@ -1016,7 +1016,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/violet.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/violet.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
