--- a/download.html
+++ b/download.html
@@ -904,7 +904,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/enchilada"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/enchilada.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -912,7 +912,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/raphael.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/raphael.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -920,7 +920,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/beryllium.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/beryllium.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -928,7 +928,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/davinci.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/davinci.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -936,7 +936,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/RMX1801.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/RMX1801.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -944,7 +944,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/Phoenix.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/phoenix.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -952,7 +952,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/RMX199X.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/RMX199X.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -960,7 +960,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/mido.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/mido.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -968,7 +968,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/kenzo.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/kenzo.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -976,7 +976,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/begonia.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/begonia.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -984,7 +984,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/sanders.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/sanders.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -992,7 +992,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/tissot"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/tissot"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1000,7 +1000,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/curtana.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/curtana.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1008,7 +1008,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/vince.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/vince.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1016,7 +1016,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/violet.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/violet.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1024,7 +1024,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/wayne.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/wayne.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1032,7 +1032,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/whyred.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/whyred.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1040,7 +1040,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/x00t.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/x00t.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1048,7 +1048,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/grus.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/grus.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1056,7 +1056,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/jd2019.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/jd2019.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1064,7 +1064,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/dipper.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/dipper.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1072,7 +1072,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvusrom-devices.github.io/changelogs/X00P.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/X00P.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1080,7 +1080,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/ginkgo.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/ginkgo.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1088,7 +1088,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://corvus-devices.github.io/jasmine_sprout.html"></iframe>
+		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/jasmine_sprout.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
